--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-file-input/sw-file-input.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-file-input/sw-file-input.scss
@@ -1,5 +1,8 @@
 @import "~scss/variables";
 
+$sw-file-input-color-highlighted: $color-shopware-brand-500;
+$sw-file-input-background-color-highlighted: $color-shopware-brand-50;
+
 .sw-file-input {
     .sw-file-input__file-input {
         display: none;
@@ -27,6 +30,18 @@
         border: 2px dashed $color-gray-300;
         border-radius: $border-radius-default;
         background-color: $color-gray-100;
+
+        &.is--active {
+            border-color: $sw-file-input-color-highlighted;
+            background-color: $sw-file-input-background-color-highlighted;
+            color: $sw-file-input-color-highlighted;
+
+            .sw-file-input__upload-caption {
+                .sw-icon {
+                    color: $sw-file-input-color-highlighted;
+                }
+            }
+        }
     }
 
     .sw-file-input__upload-caption {
