--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-document-settings-credit-note-modal/sw-order-document-settings-credit-note-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-document-settings-credit-note-modal/sw-order-document-settings-credit-note-modal.html.twig
@@ -1,13 +1,60 @@
+{% block sw_order_document_settings_modal_form_first_row %}
+<sw-container
+    v-if="feature.isActive('FEATURE_NEXT_7530')"
+    columns="1fr 1fr 1fr"
+    gap="0 14px"
+>
+    {% block sw_order_document_settings_modal_form_credit_document_number %}
+    <sw-text-field
+        v-model="documentConfig.documentNumber"
+        :label="$tc('sw-order.documentModal.labelDocumentNumber')"
+    />
+    {% endblock %}
+
+    {% block sw_order_document_settings_modal_form_document_select_invoice %}
+    <sw-select-field
+        v-model="documentConfig.custom.invoiceNumber"
+        class="sw-order-document-settings-credit-note-modal__invoice-select"
+        required
+        :label="$tc('sw-order.documentModal.labelInvoiceNumber')"
+        :placeholder="$tc('sw-order.documentModal.selectInvoiceNumber')"
+    >
+        <option
+            v-for="number in invoiceNumbers"
+            :key="number"
+            :value="number"
+        >
+            {{ number }}
+        </option>
+    </sw-select-field>
+    {% endblock %}
+
+    {% block sw_order_document_settings_modal_form_document_date %}
+    <sw-datepicker
+        v-model="documentConfig.documentDate"
+        date-type="date"
+        required
+        :label="$tc('sw-order.documentModal.labelDocumentDate')"
+    />
+    {% endblock %}
+</sw-container>
+{% endblock %}
+
+{# @feature-deprecated (FEATURE_NEXT_7530) tag:v6.5.0 - this block will be removed #}
 {% block sw_order_document_settings_modal_form_document_number %}
 <sw-text-field
+    v-if="!feature.isActive('FEATURE_NEXT_7530')"
     v-model="documentConfig.documentNumber"
     :label="$tc('sw-order.documentModal.labelDocumentNumber')"
 />
 {% endblock %}
 
+{# @feature-deprecated (FEATURE_NEXT_7530) tag:v6.5.0 - this block will be removed #}
 {% block sw_order_document_settings_modal_form_additional_content %}
 <sw-select-field
+    v-if="!feature.isActive('FEATURE_NEXT_7530')"
     v-model="documentConfig.custom.invoiceNumber"
+    class="sw-order-document-settings-credit-note-modal__invoice-select"
     required
     :label="$tc('sw-order.documentModal.labelInvoiceNumber')"
     :placeholder="$tc('sw-order.documentModal.selectInvoiceNumber')"
