--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-document-settings-delivery-note-modal/sw-order-document-settings-delivery-note-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-document-settings-delivery-note-modal/sw-order-document-settings-delivery-note-modal.html.twig
@@ -1,15 +1,24 @@
 {% block sw_order_document_settings_modal_form_first_row %}
+{# @feature-deprecated (FEATURE_NEXT_7530) tag:v6.5.0 - this block will be removed #}
 {% block sw_order_document_settings_modal_form_document_number_before %}
 <sw-text-field
+    v-if="!feature.isActive('FEATURE_NEXT_7530')"
     v-model="documentConfig.documentNumber"
     :label="$tc('sw-order.documentModal.labelDeliveryNoteNumber')"
 />
 {% endblock %}
+
 <sw-container
-    columns="1fr 1fr"
-    gap="0px 10px"
+    :columns="feature.isActive('FEATURE_NEXT_7530') ? '1fr 1fr 1fr' : '1fr 1fr'"
+    gap="0 14px"
 >
-    {% block sw_order_document_settings_modal_form_document_number %}{% endblock %}
+    {% block sw_order_document_settings_modal_form_document_number %}
+    <sw-text-field
+        v-if="feature.isActive('FEATURE_NEXT_7530')"
+        v-model="documentConfig.documentNumber"
+        :label="$tc('sw-order.documentModal.labelDeliveryNoteNumber')"
+    />
+    {% endblock %}
 
     {% block sw_order_document_settings_modal_form_document_date %}
     <sw-datepicker
