--- a/src/Administration/Resources/app/administration/src/module/sw-settings-custom-field/component/sw-custom-field-detail/sw-custom-field-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-custom-field/component/sw-custom-field-detail/sw-custom-field-detail.html.twig
@@ -10,7 +10,7 @@
         gap="20px"
     >
         {% block sw_custom_field_detail_modal_type %}
-        <sw-field
+        <sw-select-field
             v-model="currentCustomField.config.customFieldType"
             :label="$tc('sw-settings-custom-field.customField.detail.labelCustomFieldType')"
             :placeholder="$tc('sw-settings-custom-field.customField.detail.placeholderCustomFieldType')"
@@ -26,7 +26,7 @@
             >
                 {{ $tc(`sw-settings-custom-field.types.${key}`) }}
             </option>
-        </sw-field>
+        </sw-select-field>
         {% endblock %}
 
         {% block sw_custom_field_detail_modal_technical_name %}
