fix lint errors

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-custom-field-set-renderer/sw-custom-field-set-renderer.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-custom-field-set-renderer/sw-custom-field-set-renderer.html.twig
@@ -76,7 +76,7 @@
             @new-item-active="(tab) => loadCustomFieldSet(tab.name)"
         >
             {% block sw_custom_field_set_renderer_card_tabs %}
-            <template v-slot="{ active }">
+            <template #default="{ active }">
                 <template v-for="set in visibleCustomFieldSets">
                     <sw-tabs-item
                         :key="`sw-tab--${set.id}`"
@@ -103,8 +103,12 @@
                         :class="'sw-custom-field-set-renderer-tab-content__' + set.name"
                     >
                         {% block sw_custom_field_set_renderer_card_form_renderer %}
-                        <sw-skeleton v-if="!set.customFields || !set.customFields.length" style="width:100%" />
-                        <template v-for="customField in set.customFields" v-else>
+                        <sw-skeleton v-if="!set.customFields || !set.customFields.length"
+                                     style="width:100%"
+                        />
+                        <template v-for="customField in set.customFields"
+                                  v-else
+                        >
                             <sw-inherit-wrapper
                                 v-if="entity && customField.config"
                                 :key="customField.name"
