NEXT-21620 - Display warning in bulk edit

--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-order/sw-bulk-edit-order.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-order/sw-bulk-edit-order.html.twig
@@ -65,6 +65,21 @@
                 :title="$tc('sw-bulk-edit.order.documents.cardTitle')"
                 :is-loading="isLoading"
             >
+                {% block sw_bulk_edit_order_content_documents_warning %}
+                <sw-container
+                    v-if="showBulkEditDocumentWarning"
+                    class="sw-bulk-edit-order-base__documents-warning-container"
+                    columns="1fr"
+                >
+                    <sw-alert
+                        variant="info"
+                        class="sw-bulk-edit-order-base__documents-warning"
+                    >
+                        {{ $tc('sw-bulk-edit.order.documents.warning') }}
+                    </sw-alert>
+                </sw-container>
+                {% endblock %}
+
                 {% block sw_bulk_edit_order_content_documents_content %}
                 <sw-bulk-edit-change-type-field-renderer
                     :form-fields="documentsFormFields"
