--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-order/sw-bulk-edit-order.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-order/sw-bulk-edit-order.scss
@@ -17,4 +17,8 @@
             display: none;
         }
     }
+
+    .sw-bulk-edit-order-base__documents-warning-container {
+        padding: 24px 32px 0 24px;
+    }
 }
