NEXT-19559 - Add warnings in admin UI

--- a/src/Administration/Resources/app/administration/src/module/sw-extension/page/sw-extension-my-extensions-listing/sw-extension-my-extensions-listing.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-extension/page/sw-extension-my-extensions-listing/sw-extension-my-extensions-listing.scss
@@ -24,6 +24,11 @@
                 margin: 0 auto 24px;
             }
         }
+
+        .sw-extension-my-extensions-listing__app-url-warning {
+            max-width: 960px;
+            margin-bottom: 32px;
+        }
     }
 
     &-empty-state {
