--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-admin/sw-admin.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-admin/sw-admin.html.twig
@@ -8,5 +8,6 @@
     <sw-license-violation />
     <sw-hidden-iframes />
     <sw-modals-renderer />
+    <sw-app-wrong-app-url-modal v-if="isLoggedIn" />
 </div>
 {% endblock %}
