--- a/src/Administration/Resources/app/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
@@ -92,6 +92,7 @@
                 <sw-media-upload-v2
                     v-if="showUploadField"
                     variant="regular"
+                    :default-folder="defaultFolder"
                     :allow-multi-select="false"
                     :upload-tag="uploadTag"
                     :disabled="disabled"
