--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-save-modal-process/sw-bulk-edit-save-modal-process.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-save-modal-process/sw-bulk-edit-save-modal-process.html.twig
@@ -15,6 +15,33 @@
     </sw-label>
     {% endblock %}
 
+    {% block sw_bulk_edit_save_modal_process_generate_document %}
+    <ul
+        v-if="selectedDocumentTypes.length > 0"
+        class="sw-bulk-edit-save-modal-process__generate-document-container"
+    >
+        <li
+            v-for="selectedDocumentType in selectedDocumentTypes"
+            :key="selectedDocumentType.id"
+            class="sw-bulk-edit-save-modal-process__generate-document"
+        >
+            <div class="progress">
+                <div class="progress__label">
+                    <span>{{ selectedDocumentType.translated.name }}</span>
+                    <span>{{ `${document[selectedDocumentType.technicalName].isReached}%` }}</span>
+                </div>
+                <div class="progress__bar">
+                    <div
+                        class="progress__bar-fill"
+                        :style="{ width: `${document[selectedDocumentType.technicalName].isReached}%` }"
+                    >
+                    </div>
+                </div>
+            </div>
+        </li>
+    </ul>
+    {% endblock %}
+
     {% block sw_bulk_edit_save_modal_process_content %}
     <p class="sw-bulk-edit-save-modal__help-text">
         {{ $tc('sw-bulk-edit.modal.process.description') }}
