--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-save-modal-success/sw-bulk-edit-save-modal-success.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-save-modal-success/sw-bulk-edit-save-modal-success.scss
@@ -1,48 +1,21 @@
-@import "~scss/variables.scss";
-
 .sw-bulk-edit-save-modal-success {
-    &__download-order-documents {
+    &__download-document-container {
         width: 100%;
         margin: 24px 0;
     }
 
-    &__download-order-document {
+    &__download-document {
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         list-style: none;
 
         &:not(:first-child) {
             margin-top: 24px;
         }
-    }
 
-    &__download-order-document .progress {
-        flex-grow: 1;
-        margin-right: 24px;
-
-        &__label {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 8px;
-            font-size: $font-size-small;
-        }
-
-        &__bar {
-            position: relative;
-            width: 100%;
-            height: 8px;
-            background-color: $color-gray-100;
-            border-radius: $border-radius-pill;
-        }
-
-        &__bar-fill {
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            background-color: $color-emerald-500;
-            border-radius: $border-radius-pill;
-            transition: width 0.15s ease-in-out;
+        .label {
+            flex-grow: 1;
+            margin-right: 24px;
         }
     }
 }
