NEXT-21562 - Re-styling for disabled action in Flow Builder

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-app-action-modal/sw-flow-app-action-modal.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-app-action-modal/sw-flow-app-action-modal.scss
@@ -14,4 +14,9 @@
         margin-left: 8px;
         font-size: $font-size-small;
     }
+
+    .sw-field--checkbox__content .sw-field .sw-field__label label {
+        flex-grow: inherit;
+        margin-right: 10px;
+    }
 }
