--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
@@ -37,24 +37,27 @@
         />
         {% endblock %}
 
-        {% block sw_settings_country_address_handling_options_card_field_check_advanced_postal_code_pattern %}
-        <sw-switch-field
-            v-model="country.checkAdvancedPostalCodePattern"
-            class="sw-settings-country-address-handling__option-items"
-            bordered
-            :disabled="!acl.can('country.editor') || !country.checkPostalCodePattern"
-            :label="$tc('sw-settings-country.detail.labelCheckAdvancedPostalCodePattern')"
-        />
-        {% endblock %}
+        {% block sw_settings_country_address_handling_options_card_field_advanced_postal_code %}
+        <div class="sw-settings-country-address-handling__option-items advanced-postal-code">
+            {% block sw_settings_country_address_handling_options_card_field_check_advanced_postal_code_pattern %}
+            <sw-switch-field
+                v-model="country.checkAdvancedPostalCodePattern"
+                class="sw-settings-country-address-handling__option-items"
+                :disabled="!acl.can('country.editor') || !country.checkPostalCodePattern"
+                :label="$tc('sw-settings-country.detail.labelCheckAdvancedPostalCodePattern')"
+            />
+            {% endblock %}
 
-        {% block  sw_settings_country_address_handling_options_card_field_advanced_postal_code_pattern %}
-        <sw-text-field
-            v-if="country.checkAdvancedPostalCodePattern"
-            v-model="country.advancedPostalCodePattern"
-            class="sw-settings-country-address-handling__text-field"
-            :disabled="!acl.can('country.editor')"
-            :label="$tc('sw-settings-country.detail.labelAdvancedPostalCodePattern')"
-        />
+            {% block  sw_settings_country_address_handling_options_card_field_advanced_postal_code_pattern %}
+            <sw-text-field
+                v-model="country.advancedPostalCodePattern"
+                class="sw-settings-country-address-handling__text-field"
+                :class="{'is--disabled': !country.checkAdvancedPostalCodePattern}"
+                :disabled="!acl.can('country.editor')"
+                :placeholder="$tc('sw-settings-country.detail.placeholderAdvancedPostalCodePattern')"
+            />
+            {% endblock %}
+        </div>
         {% endblock %}
     </sw-card>
     {% endblock %}
