--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-sidebar/sw-settings-country-sidebar.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-sidebar/sw-settings-country-sidebar.scss
@@ -4,7 +4,7 @@
     &__variable-item {
         display: flex;
         font-size: $font-size-small;
-        padding: 14px 0;
+        padding: 14px 20px;
         justify-content: space-between;
         color: $color-darkgray-200;
 
