NEXT-20503 - fix promotions not created on no system default language

--- a/src/Administration/Resources/app/administration/src/module/sw-promotion-v2/view/sw-promotion-v2-detail-base/sw-promotion-v2-detail-base.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-promotion-v2/view/sw-promotion-v2-detail-base/sw-promotion-v2-detail-base.html.twig
@@ -21,6 +21,7 @@
                 :label="$tc('sw-promotion-v2.detail.base.general.nameLabel')"
                 :disabled="!acl.can('promotion.editor')"
                 :error="promotionNameError"
+                :placeholder="placeholder(promotion, 'name', $tc('sw-promotion.detail.main.general.placeholderName'))"
             />
 
             <sw-number-field
