NEXT-20255 - Add extension twig block for delay block

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/view/detail/sw-flow-detail-flow/sw-flow-detail-flow.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/view/detail/sw-flow-detail-flow/sw-flow-detail-flow.html.twig
@@ -99,5 +99,8 @@
         {% endblock %}
     </div>
     {% endblock %}
+
+    {% block sw_flow_detail_flow_modal_extension %}
+    {% endblock %}
 </div>
 {% endblock %}
